--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
+    "langchain": "^0.0.167",
     "next": "13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
